--- a/text.html
+++ b/text.html
@@ -1,200 +1,221 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Astronomy Learning Platform</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Orbitron', sans-serif;
-      background: #000000; /* Dark background for space theme */
-      color: #ffffff; /* White text */
-      overflow-x: hidden;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Astronomy Learning Platform</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        margin: 0;
+        font-family: "Orbitron", sans-serif;
+        background: #000000; /* Dark background for space theme */
+        color: #ffffff; /* White text */
+        overflow-x: hidden;
+      }
 
-    header {
-      background: url('https://www.nasa.gov/sites/default/files/thumbnails/image/potw2138a.jpg') no-repeat center center/cover;
-      height: 80vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      color: #ffffff;
-      text-align: center;
-      padding: 20px;
-      box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.6);
-    }
+      header {
+        background: url("https://www.nasa.gov/sites/default/files/thumbnails/image/potw2138a.jpg")
+          no-repeat center center/cover;
+        height: 80vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: #ffffff;
+        text-align: center;
+        padding: 20px;
+        box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.6);
+      }
 
-    header h1 {
-      font-size: 4em;
-      margin-bottom: 10px;
-      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
-    }
+      header h1 {
+        font-size: 4em;
+        margin-bottom: 10px;
+        text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
+      }
 
-    header p {
-      font-size: 1.8em;
-      text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.6);
-    }
+      header p {
+        font-size: 1.8em;
+        text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.6);
+      }
 
-    nav {
-      background-color: #1d1d1d; /* Dark navigation bar */
-      display: flex;
-      justify-content: center;
-      padding: 15px 0;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
+      nav {
+        background-color: #1d1d1d; /* Dark navigation bar */
+        display: flex;
+        justify-content: center;
+        padding: 15px 0;
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+      }
 
-    nav a {
-      color: #ffffff;
-      margin: 0 20px;
-      text-decoration: none;
-      font-weight: bold;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      transition: color 0.3s;
-    }
+      nav a {
+        color: #ffffff;
+        margin: 0 20px;
+        text-decoration: none;
+        font-weight: bold;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        transition: color 0.3s;
+      }
 
-    nav a:hover {
-      color: #f2f2f2; /* Lighter text on hover */
-    }
+      nav a:hover {
+        color: #f2f2f2; /* Lighter text on hover */
+      }
 
-    .main-content {
-      display: flex;
-      justify-content: space-between;
-      padding: 50px 5%;
-      gap: 30px;
-    }
+      .main-content {
+        display: flex;
+        justify-content: space-between;
+        padding: 50px 5%;
+        gap: 30px;
+      }
 
-    .left-content {
-      flex: 2;
-      min-width: 300px;
-    }
+      .left-content {
+        flex: 2;
+        min-width: 300px;
+      }
 
-    .left-content iframe {
-      width: 100%;
-      height: 500px;
-      border-radius: 12px;
-      border: 2px solid #ffffff; /* White border for the viewer */
-      box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.4);
-    }
+      .left-content iframe {
+        width: 100%;
+        height: 500px;
+        border-radius: 12px;
+        border: 2px solid #ffffff; /* White border for the viewer */
+        box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.4);
+      }
 
-    .events-section {
-      flex: 3;
-      padding: 50px;
-      background-color: #1d1d1d; /* Dark gray for the events box */
-      color: #ffffff; /* White text */
-      border-radius: 10px;
-      box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.5);
-    }
+      .events-section {
+        flex: 3;
+        padding: 50px;
+        background-color: #1d1d1d; /* Dark gray for the events box */
+        color: #ffffff; /* White text */
+        border-radius: 10px;
+        box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.5);
+      }
 
-    .events-section h2 {
-      text-align: center;
-      font-size: 2.8em;
-      margin-bottom: 30px;
-      color: #ffffff;
-    }
+      .events-section h2 {
+        text-align: center;
+        font-size: 2.8em;
+        margin-bottom: 30px;
+        color: #ffffff;
+      }
 
-    .event-card {
-      background-color: #121212; /* Very dark gray for cards */
-      padding: 25px;
-      border-radius: 10px;
-      margin-bottom: 20px;
-      border: 1px solid #333333; /* Subtle border for the cards */
-      transition: transform 0.3s ease, border-color 0.3s ease;
-      box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.4);
-    }
+      .event-card {
+        background-color: #121212; /* Very dark gray for cards */
+        padding: 25px;
+        border-radius: 10px;
+        margin-bottom: 20px;
+        border: 1px solid #333333; /* Subtle border for the cards */
+        transition: transform 0.3s ease, border-color 0.3s ease;
+        box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.4);
+      }
 
-    .event-card:hover {
-      transform: translateY(-5px);
-      border-color: #ffffff; /* White border on hover */
-      box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.6);
-    }
+      .event-card:hover {
+        transform: translateY(-5px);
+        border-color: #ffffff; /* White border on hover */
+        box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.6);
+      }
 
-    .event-card h4 {
-      color: #ffffff; /* White heading for the events */
-      margin-bottom: 15px;
-      font-size: 1.8em;
-      font-weight: bold;
-    }
+      .event-card h4 {
+        color: #ffffff; /* White heading for the events */
+        margin-bottom: 15px;
+        font-size: 1.8em;
+        font-weight: bold;
+      }
 
-    .event-card p {
-      color: #bbbbbb; /* Lighter text for event descriptions */
-      font-size: 1.1em;
-      line-height: 1.6;
-    }
+      .event-card p {
+        color: #bbbbbb; /* Lighter text for event descriptions */
+        font-size: 1.1em;
+        line-height: 1.6;
+      }
 
-    .footer {
-      background-color: #000000; /* Black footer */
-      color: #ffffff;
-      text-align: center;
-      padding: 30px 15px;
-      font-size: 1em;
-      margin-top: 60px;
-    }
+      .footer {
+        background-color: #000000; /* Black footer */
+        color: #ffffff;
+        text-align: center;
+        padding: 30px 15px;
+        font-size: 1em;
+        margin-top: 60px;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>Astronomy Learning Platform</h1>
+      <p>Explore the universe — interactively, visually, and intelligently</p>
+    </header>
 
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Astronomy Learning Platform</h1>
-    <p>Explore the universe — interactively, visually, and intelligently</p>
-  </header>
+    <nav>
+      <a href="#">Home</a>
+      <a href="constellations.html">Constellations</a>
+      <a href="planets.html">Planets</a>
+      <a href="quiz.html">Quizzes</a>
+      <a href="#">Events</a>
+      <a href="#">Resources</a>
+    </nav>
 
-  <nav>
-    <a href="#">Home</a>
-    <a href="constellations.html">Constellations</a>
-    <a href="planets.html">Planets</a>
-    <a href="quiz.html">Quizzes</a>
-    <a href="#">Events</a>
-    <a href="#">Resources</a>
-  </nav>
+    <!-- Main Content Section -->
+    <section class="main-content">
+      <!-- Left Content - 3D Solar System Viewer -->
+      <div class="left-content">
+        <h2>Interactive Solar System Viewer</h2>
+        <iframe
+          src="https://eyes.nasa.gov/apps/orrery/#/"
+          title="3D Solar System Viewer"
+        ></iframe>
+      </div>
 
-  <!-- Main Content Section -->
-  <section class="main-content">
-    <!-- Left Content - 3D Solar System Viewer -->
-    <div class="left-content">
-      <h2>Interactive Solar System Viewer</h2>
-      <iframe src="https://eyes.nasa.gov/apps/orrery/#/" title="3D Solar System Viewer"></iframe>
+      <!-- Right Content - Today's Events -->
+      <div class="events-section">
+        <h2>Today's Astronomical Events</h2>
+
+        <!-- Event 1 -->
+        <div class="event-card">
+          <h4>Solar Eclipse</h4>
+          <p>
+            There will be a partial solar eclipse visible in parts of Europe and
+            Africa today. The eclipse will reach its peak at 12:30 PM UTC.
+          </p>
+        </div>
+
+        <!-- Event 2 -->
+        <div class="event-card">
+          <h4>Meteor Shower</h4>
+          <p>
+            The Perseids meteor shower will peak tonight, offering a stunning
+            display of shooting stars. The best viewing time will be between
+            midnight and dawn.
+          </p>
+        </div>
+
+        <!-- Event 3 -->
+        <div class="event-card">
+          <h4>Planetary Conjunction</h4>
+          <p>
+            A rare alignment of Jupiter and Saturn will be visible just after
+            sunset in the western sky. The planets will appear very close to
+            each other.
+          </p>
+        </div>
+
+        <!-- Event 4 -->
+        <div class="event-card">
+          <h4>Comet Observation</h4>
+          <p>
+            Comet C/2023 T2 will be visible in the night sky. Bring your
+            telescope for a closer look at this icy traveler from the outer
+            solar system.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <div class="footer">
+      &copy; 2025 Astronomy Learning Platform — Powered by curiosity and space.
     </div>
-
-    <!-- Right Content - Today's Events -->
-    <div class="events-section">
-      <h2>Today's Astronomical Events</h2>
-
-      <!-- Event 1 -->
-      <div class="event-card">
-        <h4>Solar Eclipse</h4>
-        <p>There will be a partial solar eclipse visible in parts of Europe and Africa today. The eclipse will reach its peak at 12:30 PM UTC.</p>
-      </div>
-
-      <!-- Event 2 -->
-      <div class="event-card">
-        <h4>Meteor Shower</h4>
-        <p>The Perseids meteor shower will peak tonight, offering a stunning display of shooting stars. The best viewing time will be between midnight and dawn.</p>
-      </div>
-
-      <!-- Event 3 -->
-      <div class="event-card">
-        <h4>Planetary Conjunction</h4>
-        <p>A rare alignment of Jupiter and Saturn will be visible just after sunset in the western sky. The planets will appear very close to each other.</p>
-      </div>
-
-      <!-- Event 4 -->
-      <div class="event-card">
-        <h4>Comet Observation</h4>
-        <p>Comet C/2023 T2 will be visible in the night sky. Bring your telescope for a closer look at this icy traveler from the outer solar system.</p>
-      </div>
-    </div>
-  </section>
-
-  <div class="footer">
-    &copy; 2025 Astronomy Learning Platform — Powered by curiosity and space.
-  </div>
-
-</body>
+    <script src="sale.js"></script>
+    <script src="bookmark.js"></script>
+  </body>
 </html>
