--- a/results.html
+++ b/results.html
@@ -126,7 +126,7 @@
 
   <div class="buttons-container">
     <button onclick="window.location.href='quiz.html'">Retake Quiz</button>
-    <button onclick="window.location.href='index.html'">Go to Homepage</button>
+    <button onclick="window.location.href='text.html'">Go to Homepage</button>
   </div>
 </div>
 
