--- a/event.html
+++ b/event.html
@@ -115,6 +115,11 @@
         line-height: 1.6;
       }
 
+      .event-card .meta {
+        padding: 0.5rem 0;
+        color: #ccc;
+      }
+
       /* Animations */
       @keyframes fadeInUp {
         0% {
@@ -157,78 +162,61 @@
 
       <div class="event-card">
         <h2>🌠 Perseid Meteor Shower</h2>
-        <p><strong>Date:</strong> August 12–13, 2025</p>
+        <p class="meta"><strong>Date:</strong> August 12–13, 2025</p>
+        <p class="meta"><strong>Visibility:</strong> Northern Hemisphere</p>
         <p>
-          <strong>Visibility:</strong> Northern Hemisphere, especially in dark
-          rural areas.
-        </p>
-        <p>
-          One of the most active and reliable meteor showers, producing up to
-          100 meteors per hour. Best viewed after midnight under clear, dark
-          skies.
+          Up to 100 meteors per hour under dark skies—one of the most stunning
+          meteor displays of the year.
         </p>
       </div>
 
       <div class="event-card">
         <h2>🌕 Total Lunar Eclipse</h2>
-        <p><strong>Date:</strong> September 7, 2025</p>
+        <p class="meta"><strong>Date:</strong> September 7, 2025</p>
+        <p class="meta"><strong>Visibility:</strong> Europe, Africa, Asia</p>
         <p>
-          <strong>Visibility:</strong> Europe, Africa, Asia, and parts of
-          Australia.
-        </p>
-        <p>
-          The Moon will pass completely through Earth’s shadow, taking on a
-          dramatic red hue. Great opportunity for night photographers and
-          skywatchers.
+          The Moon turns red during a full eclipse. A perfect opportunity for
+          lunar photographers.
         </p>
       </div>
 
       <div class="event-card">
         <h2>🌞 Partial Solar Eclipse</h2>
-        <p><strong>Date:</strong> October 29, 2025</p>
+        <p class="meta"><strong>Date:</strong> October 29, 2025</p>
+        <p class="meta"><strong>Visibility:</strong> Americas</p>
         <p>
-          <strong>Visibility:</strong> Parts of North America, Central America,
-          and western South America.
-        </p>
-        <p>
-          A partial eclipse where the Moon covers a portion of the Sun. Always
-          use certified eclipse glasses for safe viewing!
+          Moon covers a portion of the Sun. Always use certified eclipse glasses
+          for safe viewing!
         </p>
       </div>
 
       <div class="event-card">
         <h2>🌌 Orionid Meteor Shower</h2>
-        <p><strong>Date:</strong> October 21–22, 2025</p>
-        <p><strong>Visibility:</strong> Worldwide in both hemispheres.</p>
+        <p class="meta"><strong>Date:</strong> October 21–22, 2025</p>
+        <p class="meta"><strong>Visibility:</strong> Worldwide</p>
         <p>
-          The Orionids are fast meteors with occasional fireballs. They
-          originate from Halley’s Comet and appear to radiate from the Orion
-          constellation.
+          Fast meteors from Halley’s Comet. Visible from both hemispheres,
+          especially before dawn.
         </p>
       </div>
 
       <div class="event-card">
         <h2>🪐 Jupiter at Opposition</h2>
-        <p><strong>Date:</strong> November 3, 2025</p>
+        <p class="meta"><strong>Date:</strong> November 3, 2025</p>
+        <p class="meta"><strong>Visibility:</strong> Global</p>
         <p>
-          <strong>Visibility:</strong> Best viewed around midnight from anywhere
-          with a clear sky.
-        </p>
-        <p>
-          Jupiter will be directly opposite the Sun in our sky — the brightest
-          and closest it gets all year. Use a telescope to see its cloud bands
-          and moons!
+          Closest and brightest view of Jupiter all year. Look for its cloud
+          bands and moons with a telescope.
         </p>
       </div>
 
       <div class="event-card">
         <h2>🔭 James Webb Anniversary</h2>
-        <p><strong>Date:</strong> December 25, 2025</p>
-        <p><strong>Visibility:</strong> Global (virtual celebration)</p>
+        <p class="meta"><strong>Date:</strong> December 25, 2025</p>
+        <p class="meta"><strong>Visibility:</strong> Global</p>
         <p>
-          Celebrate the launch anniversary of NASA’s most powerful space
-          telescope. Expect new images, public talks, and media from NASA and
-          partners.
+          Celebrate JWST's discoveries with virtual tours, public events, and
+          new images from deep space.
         </p>
       </div>
     </main>
