--- a/text.html
+++ b/text.html
@@ -145,6 +145,7 @@
   </head>
   <body>
     <header>
+      <h1>Cosmicon</h1>
       <h1>Astronomy Learning Platform</h1>
       <p>Explore the universe — interactively, visually, and intelligently</p>
     </header>
